[package]
name = "venus-html"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "rationalize float to ratio"
repository = "https://github.com/oovm/chemical-balancer/tree/dev/projects/rationalize"
documentation = "https://docs.rs/rationalize"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["dist/", "target/", "desktop/", "website/", "tests/"]

[[bin]]
name = "chemical-web"
path = "website/main.rs"

[[bin]]
name = "chemical-balancer"
path = "desktop/main.rs"

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-web = "0.3.1"
dioxus-hooks-plus = "0.2.1"

[dependencies.chemical-balancer]
version = "*"
path = "../chemical-balancer"

[dev-dependencies]
image = "0.24.6"

[features]
default = []
